--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 appdirs==1.4.4
 beautifulsoup4==4.9.3
+bs4==0.0.1
 certifi==2020.6.20
 chardet==3.0.4
 cssselect==1.1.0
 fake-useragent==0.1.11
 idna==2.10
 lxml==4.6.1
+numpy==1.19.4
+pandas==1.1.5
 parse==1.18.0
 pyee==7.0.4
 pyppeteer==0.2.2
 pyquery==1.4.1
+python-dateutil==2.8.1
+pytz==2020.4
 requests==2.24.0
 requests-html==0.10.0
 six==1.15.0
