--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,15 @@ cssselect==1.1.0
 fake-useragent==0.1.11
 idna==2.10
 lxml==4.6.1
-numpy==1.19.4
-pandas==1.1.5
+numpy==1.19.5
+pandas==1.2.1
 parse==1.18.0
 pyee==7.0.4
 pyppeteer==0.2.2
 pyquery==1.4.1
 python-dateutil==2.8.1
 pytz==2020.4
+PyYAML==5.4.1
 requests==2.24.0
 requests-html==0.10.0
 six==1.15.0
